--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,5 +4,9 @@
 }
 
 #sponsored {
-  width: 100%;
+  margin-right: 310px;
+}
+
+#trending-subreddits {
+  display: inline-block;
 }
